# transformer-from-scratch

./: .gitignore  Makefile  requirements.txt
cpp/: CMakeLists.txt
cpp/bench/: bench_matmul.cpp
cpp/include/: attention.hpp  loader.hpp  ops.hpp  transformer.hpp
cpp/src/: attention.cpp  loader.cpp  main.cpp  ops.cpp  transformer.cpp
cpp/tests/: test_ops.cpp  validate_cpp.py
docs/: porting_notes.md
python/: inference.py  loader.py  model.py  ops.py  validate.py
python/tests/: test_model.py  test_ops.py
python/tokenizer/: encode.py
weights/: dump_weights.py
